--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-numpy == 1.23.5
-Pillow == 9.3.0
-einops == 0.6.0
-pandas == 1.5.2
-plotly == 5.11.0
-matplotlib == 3.6.2
-boto3 == 1.26.26
-tsp_solver == 0.1
-scipy == 1.9.0
-tqdm == 4.64.1
+boto3==1.26.50
+botocore==1.29.50
+einops==0.6.0
+ipython==8.8.0
+matplotlib==3.6.3
+numpy==1.24.1
+Pillow==9.4.0
+plotly==5.12.0
+scipy==1.10.0
+setuptools==61.2.0
+torch==1.13.1
+torchvision==0.14.1
+tsp_solver==0.1
